--- a/_config.yml
+++ b/_config.yml
@@ -99,16 +99,26 @@ post_search: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+# navbar-col: "#EAEAEA"
+navbar-col: "#3984AB"
+# navbar-text-col: "#404040"
+navbar-text-col: "#1D2434"
+# navbar-border-col: "#DDDDDD"
+navbar-border-col: "#3984AB"
+# page-col: "#FFFFFF"
 page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+# text-col: "#404040"
+text-col: "#1D2434"
+# link-col: "#008AFF"
+link-col: "#C8551F"
+# hover-col: "#0085A1"
+hover-col: "#003F45"
+# footer-col: "#EAEAEA"
+footer-col: "#3984AB"
+# footer-text-col: "#777777"
+footer-text-col: "#003F45"
+# footer-link-col: "#404040"
+footer-link-col: "#1D2434"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
