--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ footer-link-col: "#1D2434"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-#navbar-img: "/assets/img/bgimage.png"
+#navbar-img: "assets/img/DSC_8142.jpg" 
 #footer-img: "/assets/img/bgimage.png"
 #page-img: "/assets/img/bgimage.png"
 
